# albp

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
albp/data/: galbp.py  make_dataset.py  palbp.py  problem.py  reader.py  salbp.py  utils.py
albp/features/: build_features.py  config.yml
albp/models/: train_model.py
docs/: Makefile  conf.py  index.rst  make.bat
models/gasse/: config.yml  policy.py
models/generator/: albp_gen.py
models/observation/: explore_then_SB.py
notebooks/: 1.0-mu-SALBP-dataset-generation.ipynb  1.0-mu-deap-exploration.ipynb  1.0-mu-pyscipopt-exploration.ipynb  1.0-mu-uniform-datasets.ipynb  1.1-mu-pyscipopt-exploration.ipynb  1.2-mu-explore-environments.ipynb  1.2-mu-pyscipopt-exploration.ipynb  1.3-mu-explore-environments.ipynb
tests/: test_alb_reader.py  test_instance_generator.py
