[tool.poetry]
name = "albp"
version = "0.1.0"
description = "A solver for the Assembly Line Balancing Problem (ALBP)."
authors = ["Michele Urbani <michele@didatec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ecole = "^0.8.1"
ortools = "^9.8.3296"
click = "^8.1.7"
python-dotenv = "^1.0.1"
torch = "^2.2.1"
torch-geometric = "^2.5.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
cookiecutter = "^2.6.0"
flake8 = "^7.0.0"
sphinx = "^7.2.6"
coverage = "^7.4.3"
ipykernel = "^6.29.3"
pyscipopt = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
